k8s/5-backend.service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: neueda-team-dashboard
  name: team-dashboard-backend
spec:
  ports:
  - name: http-api
    port: 80
    targetPort: 8080
  selector:
    app: team-dashboard-backend
