k8s/5-frontend.service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: neueda-team-dashboard
  name: team-dashboard-frontend
spec:
  ports:
  - name: http-api
    port: 80
    targetPort: 80
  selector:
    app: team-dashboard-frontend
